--- a/JSC370A2_Student.ipynb
+++ b/JSC370A2_Student.ipynb
@@ -102,7 +102,7 @@
     "\n",
     "## Question\n",
     "\n",
-    "Is it possible to identify two or three subgroups of patients with liver cancer, using The Cancer Genome Atlas (TCGA) transcriptome sequencing data, that have different survival times?  What impact does age at diagnosis, tumor stage, and sex on the relationship between survival and subgroup?\n",
+    "Can you identify distinct biological “subtypes” of patients with liver cancer, using The Cancer Genome Atlas (TCGA) transcriptome sequencing data, that have different survival times?  If you are able to identify subtypes of patients then what impact does age at diagnosis, tumor stage, and sex have on the relationship between survival and subgroup?\n",
     "\n",
     "\n",
     "## Data\n",
@@ -466,7 +466,7 @@
     "\n",
     "Your presentation will be graded using the [presentation rubric.](https://jsc370.github.io/assignment_rubrics.html#presentation_rubric)\n",
     "\n",
-    "Presentation slides should be uploaded to Quercus by Jan. 28, 18:00.\n",
+    "Presentation slides should be uploaded to Quercus by Feb. 11, 18:00.\n",
     "\n",
     "\n",
     "# Written Report Expectations\n",
